<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true" >
    
<RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background" >
    <TextView 
        android:id="@+id/textview_topmovie"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingLeft="2dp"
        android:background="@color/black"
        android:textColor="@color/white1"
        android:text="@string/TopMovie" 
        />
    <!-- <HorizontalScrollView
        android:id="@+id/horizontalscroll_topmovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_topmovie" >
        <LinearLayout 
            android:id="@+id/linearlayout_topmovie" 
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:orientation="horizontal" >
            <ProgressBar 
                android:id="@+id/progressbar_topmovie"
	            style="?android:attr/progressBarStyle"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:layout_gravity="center"
	            android:visibility="gone" />
        </LinearLayout>
    </HorizontalScrollView> -->
    <RelativeLayout 
        android:id="@+id/linearlayout_topmovie" 
        android:layout_width="wrap_content"
        android:layout_height="150sp"
        android:layout_below="@id/textview_topmovie"
        android:orientation="horizontal" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            >
		    <ProgressBar 
		        android:id="@+id/progressbar_topmovie"
		        style="?android:attr/progressBarStyle"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerInParent="true"
		        android:visibility="gone" />
	    </LinearLayout>
	    <Gallery
	        android:id="@+id/gallery_topmovie"
	        android:layout_width="fill_parent" 
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:visibility="gone"
	        android:spacing="10dp" />
    </RelativeLayout>
    <TextView 
        android:id="@+id/textview_movie"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout_topmovie"
        android:background="@color/black"
        android:paddingLeft="2dp"
        android:textColor="@color/white1"
        android:text="@string/Movie" />
    
    <Button 
        android:id="@+id/button_recentmovie"
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_movie"
        android:background="@drawable/button_background"
        android:gravity="center_vertical|left"
        android:drawableRight="@drawable/navigation_next"
        android:drawablePadding="10dp"
        android:textSize="18dp"
        android:text="@string/recent" />
    <View 
            android:id="@+id/view_line1"
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/button_recentmovie"
            android:background="@color/grey05"
            /> 
    <Button 
        android:id="@+id/button_firstmovie"
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"
        android:layout_below="@id/view_line1"
        android:background="@drawable/button_background"
        android:gravity="center_vertical|left"
        android:drawableRight="@drawable/navigation_next"
        android:drawablePadding="10dp"
        android:textSize="18dp"
        android:text="@string/FirstMovie" />
    <View 
            android:id="@+id/view_line2"
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/button_firstmovie"
            android:background="@color/grey05"
            />
    <Button 
        android:id="@+id/button_secondmovie"
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_line2"
        android:background="@drawable/button_background"
        android:gravity="center_vertical|left"
        android:drawableRight="@drawable/navigation_next"
        android:drawablePadding="10dp"
        android:textSize="18dp"
        android:text="@string/SecondMovie" />
    <View 
            android:id="@+id/view_line3"
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/button_secondmovie"
            android:background="@color/grey05"
            />
    <Button 
        android:id="@+id/button_theater"
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_line3"
        android:background="@drawable/button_background"
        android:gravity="center_vertical|left"
        android:drawableRight="@drawable/navigation_next"
        android:drawablePadding="10dp"
        android:textSize="18dp"
        android:text="@string/Theater" />
    <View 
            android:id="@+id/view_line4"
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/button_theater"
            android:background="@color/grey05"/>

</RelativeLayout>

    </ScrollView>